--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,10 @@
 .header-container {
     background-color: #2155cd;
     padding: 1.15rem;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 14;
 }
 .navbar {
     width: 100%;
